@@ -35,6 +35,7 @@ struct drivelist {
 {	"TOSHIBA",	"XM-3401",	NULL,	&toshiba_proto		},
 {	"TOSHIBA",	"XM-3301",	NULL,	&toshiba_proto		},
 {	"SONY",		"CDU-8012",	NULL,	&sony_proto		},
+{	"SONY",		"CDU-76S",	NULL,	&sony_proto		},
 {	NULL,		NULL,		NULL,	&generic_proto		}
 };
 
@@ -277,7 +278,7 @@ read_toc()
 	thiscd.cddbtoc[thiscd.ntracks].absframe = tempframe;
 
 	thiscd.magicID = cddb_discid();
-//	printf("%x\n",thiscd.magicID);
+/* printf("%x\n",thiscd.magicID); */
 	return (&thiscd);
 }
 
@@ -322,7 +323,7 @@ cd_status()
 	status = wmcd_open(&drive);
 #endif
 
-//printf("%s %d\n",cd_device, status);
+/* printf("%s %d\n",cd_device, status); */
 	if (status < 0)
 		return (status);
 	if (status > 0)
@@ -389,7 +390,7 @@ cd_status()
 		cur_magicID = cd->magicID;
 		cur_cdmode = STOPPED;
 		have_new_cd = 1;
-//printf("Setting have_new_cd to 1\n");
+/* printf("Setting have_new_cd to 1\n"); */
 		ret = 2;
 	}
 
